tests/output/self_hosted/prefix_minus_error.txt
tests/prefix_minus_error.oomph:2: error: should be an expression

    print(3*+2)
            ^

